Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-02 (SVN):
    * config.guess, config.sub and ax_pthread.m4 from savannah git repo.
    * updated version date stamp to 2013-02-02.

2013-02-01 (SVN):
    * utils hcc, dhcc: marked PR_ParseError() as noreturn. in dhcc,
      changed opcode_t:priority type from float to int, commented out
      the file and file_line members of function_t.

2013-01-31 (SVN):
    * rename host_abortserver of h2 to host_abort, in line with h2w.
      tweak the setjmp() call in Host_Init(). style clean-up.
    * updated version date stamp to 2013-01-31.

2013-01-27 (SVN):
    * timidity, resample.c (pre_resample): fixed a typo introduced by
      commit r5064.

2013-01-27 (SVN):
    * added OS2 platform macros for completeness sake.

2013-01-27 (SVN):
    * snd_timidity.c: add "LIBS:GerontoPlayer" to cfgfile[] for MorphOS
      builds. likewise for snd_wildmidi.c.
    * updated version date stamp to 2013-01-27.

2013-01-27 (SVN):
    * utils/dhcc makefile: enabled -march=i586 for ix86 builds.

2013-01-27 (SVN):
    * timidity makefile: use -march=i586 by default when compiling for
      x86, and -fomit-frame-pointer -ffast-math for optimized builds.

2013-01-26 (SVN):
    * timidity, resample.c (pre_resample): some safe-guards taken from
      Timidity++-2.11.3. went back to the Timidity++ way for the first
      sample case in the cubic interpolation loop.

2013-01-25 (SVN):
    * timidity, resample.c (pre_resample): some simplification/tidy-ups.
    * updated version date stamp to 2013-01-25.

2013-01-23 (SVN):
    * rest of the timidity-0.2i fixes from the timidity-0.2i-bugfix.pat
      patch found at the onicos.com site.
    * updated version date stamp to 2013-01-23.

2013-01-22 (SVN):
    * docs/AUTHORS: Added Sean Stach (Rhiyo) under contributors:testing.
      added Ryan C. Gordon under contributors:coding (for osx midi code,
      which I forgot doing in the previous 1.5.5 release.)
